# quiz-study-trainer-panel-holoviz

./: README.md  pyproject.toml
database_scripts/: upload_questions_json.ipynb  upload_questions_json.py
src/: main.py  teste1.ipynb
tests/: query.ipynb  teste1.ipynb  teste1.py  teste2.ipynb
tests/holoviz/: teste2.py
