[tool.poetry]
name = "quiz-study-trainer-panel-holoviz"
version = "0.1.0"
description = ""
authors = ["Rhuan Barros <rhuanbarros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
hvplot = "^0.10.0"
pandas = "^2.2.3"
jupyter-bokeh = "^4.0.5"
nbconvert = "^7.16.4"
watchfiles = "^0.24.0"
panel = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

